k8s/otasoft-catalog/networks/catalogdomain-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: catalogdomain
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/catalogdomain: "true"
  podSelector:
    matchLabels:
      io.kompose.network/catalogdomain: "true"
