k8s/otasoft-catalog/networks/otasoft-catalog-proxy-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: otasoft-catalog-proxy
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/otasoft-catalog-proxy: "true"
  podSelector:
    matchLabels:
      io.kompose.network/otasoft-catalog-proxy: "true"
